# cpputils

./: .cppcheck  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: assertions.md  class.md  cli.md  cmdline.md  color.md  common.md  log.md  math.md  process.md  string.md
include/: assertions.hpp  class.hpp  cli.hpp  cmdline.hpp  color.hpp  common.hpp  log.hpp  math.hpp  process.hpp  string.hpp
scripts/: run_cppcheck.sh
tests/: CMakeLists.txt  test_assertions.cpp  test_class.cpp  test_cli.cpp  test_cmdline.cpp  test_color.cpp  test_common.cpp  test_log.cpp  test_math.cpp  test_process.cpp  test_process_impl.cpp  test_string.cpp
